Fix the bubble position of uploaded files on mobile size

--- a/app/styles/pages/common/_common-header.scss
+++ b/app/styles/pages/common/_common-header.scss
@@ -353,7 +353,7 @@ header > ul.header-inner > li.pull-right > ul.top-menu > li > a {
     }
     > ul.header-inner > li.pull-right > ul.top-menu > li > a.ctn-badge-count {
       top: 6px;
-      right: 6px;
+      right: 72px;
     }
   }
 }
